fix(blog): fix mobile overflow x

--- a/packages/blog/src/styles/_mobile.scss
+++ b/packages/blog/src/styles/_mobile.scss
@@ -26,6 +26,9 @@ $mobileThreshold: 767px;
   }
 
   #__next {
+    > article {
+      overflow-x: hidden;
+    }
     > header {
       display: none;
     }
